Fixed mobile being too narrow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 
 * {
-	font-size: 105%;
+	font-size: 102%;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	vertical-align: baseline;
 }
@@ -93,9 +93,7 @@
 
 /* --- Anything smaller than 867px (phones / tablets) */
 @media only screen and (max-width: 867px) {
-	* {
-		font-size: 105%;
-	}
+
 	.page-content {
 		display: flex;
 		flex-direction: column;
@@ -104,9 +102,9 @@
 		background-color: rgb(179, 179, 179, 0.5);
 		backdrop-filter: blur(2rem);
 		box-shadow: 0 0 3rem 1rem rgba(0, 0, 0, 0.2);
-		margin: 4rem 3rem 4rem 3rem; 
+		margin: 4rem 2rem 4rem 2rem; 
 		height: auto;
-		width: 85%;
+		width: 90%;
 	
 	}
 
